# ICP-hackathon

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/ICP_hackathon_backend/: Cargo.toml
src/ICP_hackathon_backend/src/: ic_ticket_reservation.rs  lib.rs
src/ICP_hackathon_frontend/: package.json
src/ICP_hackathon_frontend/src/: App.jsx  index.scss
src/ICP_hackathon_frontend/src/Components/: About.jsx  EventCard.jsx  EventDetailsPage.jsx  EventRegistrationForm.jsx  Footer.jsx  Home.jsx  Navbar.jsx  Work.jsx
