[package]
name = "ICP_hackathon_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers
qrcode = "0.13.0"
image = "0.23.14"
qrcode-rust = "0.6.0"
firebase_admin = "0.16.1"
tokio = { version = "1", features = ["full"] }